<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectCommMethod" />
    <Spinner
        android:id="@+id/commMethodSelectorSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selectCommMethod" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/commConfig" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/serverAddressLbl" />
    <EditText
        android:id="@+id/serverAddressTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="10.0.2.2" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/serverPortNumberLbl" />
    <EditText
        android:id="@+id/serverPortNumberTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="5222" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ownJabberIdLbl" />
    <EditText
        android:id="@+id/ownJabberIdTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="qphonetest@localhost" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordLbl" />
    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="MegatronDump"
        android:inputType="textPassword" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/targetJabberIdLbl" />
    <EditText
        android:id="@+id/targetJabberIdTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="controllertest@abhin-laptop" />
    <Button 
        android:id="@+id/connectBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect" />
</LinearLayout>